// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table with columns with components 1`] = `
<table
  className="SpreadsheetTable"
  style={
    Object {
      "top": "NaNpx",
    }
  }
>
  <thead
    style={
      Object {
        "display": "",
        "height": "50px",
      }
    }
  >
    <tr>
      <th>
        Name
      </th>
      <th>
        Second name
      </th>
      <th>
        Position
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 50,
        }
      }
    >
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Name 1
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <div
          className="SpreadsheetTableDropdown"
        >
          <div
            onClick={[Function]}
          >
            <div
              className="SpreadsheetTableSelectHeader"
            />
          </div>
          <div
            className="SpreadsheetTableDropdown__body"
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div>
              <div
                className="SpreadsheetTableSelectItem"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              />
            </div>
          </div>
        </div>
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <input
          className="SpreadsheetTable__Input"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder={undefined}
          value="Position 1"
        />
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 50,
        }
      }
    >
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Name 2
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <div
          className="SpreadsheetTableDropdown"
        >
          <div
            onClick={[Function]}
          >
            <div
              className="SpreadsheetTableSelectHeader"
            />
          </div>
          <div
            className="SpreadsheetTableDropdown__body"
            style={
              Object {
                "display": "none",
              }
            }
          >
            <div>
              <div
                className="SpreadsheetTableSelectItem"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              />
            </div>
          </div>
        </div>
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        <input
          className="SpreadsheetTable__Input"
          onBlur={[Function]}
          onChange={[Function]}
          placeholder={undefined}
          value="Position 2"
        />
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table with columns with text values 1`] = `
<table
  className="SpreadsheetTable"
  style={
    Object {
      "top": "NaNpx",
    }
  }
>
  <thead
    style={
      Object {
        "display": "",
        "height": "50px",
      }
    }
  >
    <tr>
      <th>
        Name
      </th>
      <th>
        Second name
      </th>
      <th>
        Position
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      style={
        Object {
          "height": 50,
        }
      }
    >
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Name 1
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Second name 1
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Position 1
      </td>
    </tr>
    <tr
      style={
        Object {
          "height": 50,
        }
      }
    >
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Name 2
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Second name 2
      </td>
      <td
        className="SpreadsheetTable__cell"
        onClick={[Function]}
        onDoubleClick={[Function]}
      >
        Position 2
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table without rows 1`] = `
<table
  className="SpreadsheetTable"
  style={
    Object {
      "top": "NaNpx",
    }
  }
>
  <thead
    style={
      Object {
        "display": "",
        "height": "50px",
      }
    }
  >
    <tr>
      <th>
        Name
      </th>
      <th>
        Second name
      </th>
      <th>
        Position
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      className="SpreadsheetTable__placeholder"
    >
      <td
        colSpan={3}
      >
        <div />
      </td>
    </tr>
  </tbody>
</table>
`;
